Name:                vty-hangman-helper
Version:             0.1
Synopsis:            Console-based hangman helper
Homepage:            http://www.github.com/glguy/vty-hangman-helper
License:             BSD3
License-file:        LICENSE
Author:              Eric Mertens
Maintainer:          emertens@gmail.com
Category:            Game
Build-type:          Simple
Data-files:          wordlist1.txt
Cabal-version:       >=1.2

Executable vty-hangman-helper
  Main-is:             VtyDriver.hs
  Build-depends:       base == 4.*, vty, mtl
  Other-modules:       GameDrawing, GameModel, GameMonad, Mask, Options, VtyMonad
